@@ -26,13 +26,13 @@ class GUI_API_EXPORT SqlQueryItemDelegate : public QStyledItemDelegate
     private:
         SqlQueryItem* getItem(const QModelIndex &index) const;
         QWidget* getEditor(int type, QWidget* parent) const;
-        QWidget* getFkEditor(SqlQueryItem* item, QWidget* parent) const;
+        QWidget* getFkEditor(SqlQueryItem* item, QWidget* parent, const SqlQueryModel *model) const;
         void setEditorDataForLineEdit(QLineEdit* le, const QModelIndex& index) const;
         void setEditorDataForFk(QComboBox* cb, const QModelIndex& index) const;
         void setModelDataForFk(QComboBox* editor, QAbstractItemModel* model, const QModelIndex& index) const;
         void setModelDataForLineEdit(QLineEdit* editor, QAbstractItemModel* model, const QModelIndex& index) const;
         QString getSqlForFkEditor(SqlQueryItem* item) const;
-        qlonglong getRowCountForFkEditor(Db* db, const QString& query) const;
+        qlonglong getRowCountForFkEditor(Db* db, const QString& query, bool *isError) const;
 
         QSet<QWidget*> editorsWithAsyncExecution;
         mutable QHash<SqlQueryModel*, QComboBox*> modelToFkCombo;
@@ -43,6 +43,7 @@ class GUI_API_EXPORT SqlQueryItemDelegate : public QStyledItemDelegate
 
     private slots:
         void fkDataReady();
+        void fkDataFailed(const QString& errorText);
 };
 
 #endif // SQLQUERYITEMDELEGATE_H
